obj/src/parser.output
Grammar

    0 $accept: programa $end

    1 programa: unidadTraduccion

    2 unidadTraduccion: declaracionExterna
    3                 | unidadTraduccion declaracionExterna

    4 sentencia: sentCompuesta
    5          | sentExpresion
    6          | sentSeleccion
    7          | sentIteracion
    8          | sentEtiquetadas
    9          | sentSalto

   10 $@1: ε

   11 sentCompuesta: '{' $@1 listaDeclaraciones listaSentenciasOp '}'

   12 listaDeclaraciones: declaracion listaDeclaraciones
   13                   | error

   14 listaDeclaracionOp: listaDeclaraciones
   15                   | ε

   16 listaSentencias: sentencia listaSentenciasOp
   17                | error

   18 listaSentenciasOp: listaSentencias
   19                  | VACIO

   20 sentExpresion: ';'
   21              | expresion opcionExpresion

   22 opcionExpresion: ';'
   23                | error

   24 sentSeleccion: IF '(' expresion ')' sentencia
   25              | IF '(' expresion ')' sentencia ELSE sentencia

   26 $@2: ε

   27 sentSeleccion: SWITCH '(' expresion ')' $@2 sentencia

   28 sentIteracion: WHILE '(' expresion ')' sentencia
   29              | DO sentencia WHILE '(' expresion ')' ';'
   30              | FOR '(' expresionOp ';' expresionOp ';' expresionOp ')' sentencia

   31 expresionOp: expresion
   32            | ε

   33 sentEtiquetadas: IDENTIFICADOR ':' sentencia
   34                | CASE expresion ':' listaSentencias
   35                | DEFAULT ':' listaSentencias

   36 sentSalto: RETURN sentExpresion
   37          | CONTINUE ';'
   38          | BREAK ';'
   39          | GOTO IDENTIFICADOR ';'

   40 expresion: expAsignacion
   41          | expAsignacion ',' expresion

   42 expAsignacion: expCondicional
   43              | expUnaria operAsignacion expAsignacion
   44              | expUnaria operAsignacion error

   45 operAsignacion: '='
   46               | ADD_ASSIGN
   47               | SUB_ASSIGN
   48               | MUL_ASSIGN
   49               | DIV_ASSIGN
   50               | MOD_ASSIGN

   51 expCondicional: expOr
   52               | expOr '?' expresion ':' expCondicional

   53 expOr: expAnd
   54      | expOr OR expAnd

   55 expAnd: expIgualdad
   56       | expAnd AND expIgualdad

   57 expIgualdad: expRelacional
   58            | expIgualdad opcionIgualdad

   59 opcionIgualdad: EQ expRelacional
   60               | NEQ expRelacional

   61 expRelacional: expAditiva
   62              | expRelacional opcionRelacional

   63 opcionRelacional: '<' expAditiva
   64                 | '>' expAditiva
   65                 | LE expAditiva
   66                 | GE expAditiva

   67 expAditiva: expMultiplicativa
   68           | expAditiva opcionAditiva

   69 opcionAditiva: '+' expMultiplicativa
   70              | '-' expMultiplicativa

   71 expMultiplicativa: expUnaria
   72                  | expMultiplicativa '*' expUnaria
   73                  | expMultiplicativa '/' expUnaria
   74                  | expMultiplicativa '%' expUnaria

   75 expUnaria: expPostfijo
   76          | opcionIncDec expPostfijo
   77          | expPostfijo opcionIncDec
   78          | operUnario expUnaria
   79          | SIZEOF '(' nombreTipo ')'

   80 opcionIncDec: INC_OP
   81             | DEC_OP

   82 operUnario: '&'
   83           | '*'
   84           | '-'
   85           | '!'

   86 expPostfijo: expPrimaria
   87            | expPostfijo expPrimaria
   88            | IDENTIFICADOR opcionPostfijo
   89            | IDENTIFICADOR '(' ')'

   90 opcionPostfijo: '[' expresion ']'

   91 $@3: ε

   92 opcionPostfijo: '(' $@3 listaArgumentosNoVacia ')'
   93               | PTR_OP IDENTIFICADOR

   94 listaArgumentosNoVacia: expAsignacion masListaArgumentos

   95 masListaArgumentos: masListaArgumentos ',' expAsignacion
   96                   | ε

   97 expPrimaria: IDENTIFICADOR
   98            | ENTERO
   99            | NUM
  100            | CONSTANTE
  101            | LITERAL_CADENA
  102            | '(' expresion ')'

  103 tipoDato: INT_TYPE
  104         | FLOAT
  105         | DOUBLE
  106         | CHAR
  107         | VOID
  108         | SHORT
  109         | LONG
  110         | UNSIGNED
  111         | SIGNED

  112 nombreTipo: tipoDato

  113 declaracionExterna: definicionFuncion
  114                   | declaracion

  115 definicionFuncion: especificadorDeclaracion decla listaDeclaracionOp sentCompuesta

  116 declaracion: especificadorDeclaracion listaDeclaradores ';'
  117            | especificadorDeclaracion decla ';'

  118 especificadorDeclaracion: especificadorCompleto

  119 especificadorDeclaracionOp: especificadorCompleto
  120                           | ε

  121 especificadorCompleto: tipoAlmacenamiento especificadorDeclaracionOp
  122                      | especificadorTipo especificadorDeclaracionOp
  123                      | calificadorTipo especificadorDeclaracionOp

  124 tipoAlmacenamiento: CONST
  125                   | VOLATILE

  126 calificadorTipo: TYPEDEF
  127                | STATIC
  128                | EXTERN
  129                | AUTO
  130                | REGISTER

  131 listaDeclaradores: declarador
  132                  | listaDeclaradores ',' declarador

  133 declarador: decla opcionPostDeclarador

  134 opcionPostDeclarador: ε
  135                     | '=' inicializador

  136 opcionComa: ','
  137           | ε

  138 listaInicializadores: inicializador
  139                     | listaInicializadores ',' inicializador

  140 inicializador: expAsignacion
  141              | '{' listaInicializadores opcionComa '}'

  142 especificadorTipo: tipoDato
  143                  | especificadorStructUnion
  144                  | especificadorEnum

  145 especificadorStructUnion: structUnion cuerpoEspecificador

  146 structUnion: STRUCT
  147            | UNION

  148 cuerpoEspecificador: '{' listaDeclaracionesStruct '}'
  149                    | IDENTIFICADOR cuerpoStructOp

  150 cuerpoStructOp: '{' listaDeclaracionesStruct '}'
  151               | ε

  152 listaDeclaracionesStruct: declaracionStruct
  153                         | listaDeclaracionesStruct declaracionStruct

  154 declaracionStruct: listaCalificadores declaradoresStruct ';'

  155 listaCalificadores: especificadorTipo listaCalificadoresOp
  156                   | calificadorTipo listaCalificadoresOp

  157 listaCalificadoresOp: listaCalificadores
  158                     | ε

  159 declaradoresStruct: declaStruct
  160                   | declaradoresStruct ',' declaStruct

  161 declaStruct: declaSi
  162            | ':' expresion

  163 declaSi: decla expConstanteOp

  164 expConstanteOp: ':' expresion
  165               | ε

  166 decla: punteroOp declaradorDirecto

  167 punteroOp: puntero
  168          | ε

  169 puntero: '*' listaCalificadoresTipoOp punteroOp

  170 listaCalificadoresTipoOp: listaCalificadoresTipo
  171                         | ε

  172 listaCalificadoresTipo: calificadorTipo
  173                       | listaCalificadoresTipo calificadorTipo

  174 declaradorDirecto: IDENTIFICADOR
  175                  | '(' decla ')'
  176                  | declaradorDirecto continuacionDeclaradorDirecto

  177 continuacionDeclaradorDirecto: '[' expConstanteOp ']'
  178                              | '(' opcional

  179 opcional: ')'
  180         | listaTiposParametros ')'
  181         | listaIdentificadores ')'
  182         | tipoDato ')'

  183 listaTiposParametros: listaParametros opcionalListaParametros

  184 opcionalListaParametros: ',' ELIPSIS
  185                        | ε

  186 listaParametros: declaracionParametro
  187                | listaParametros ',' declaracionParametro

  188 declaracionParametro: especificadorDeclaracion opcionesDecla

  189 opcionesDecla: ε
  190              | decla

  191 listaIdentificadores: IDENTIFICADOR
  192                     | listaIdentificadores ',' IDENTIFICADOR

  193 especificadorEnum: ENUM opcionalEspecificadorEnum

  194 opcionalEspecificadorEnum: IDENTIFICADOR opcionalListaEnumeradores
  195                          | '{' listaEnumeradores '}'

  196 opcionalListaEnumeradores: '{' listaEnumeradores '}'
  197                          | ε

  198 listaEnumeradores: enumerador
  199                  | listaEnumeradores ',' enumerador

  200 enumerador: IDENTIFICADOR opcionalEnumerador

  201 opcionalEnumerador: '=' expresion
  202                   | ε


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 85
    '%' (37) 74
    '&' (38) 82
    '(' (40) 24 25 27 28 29 30 79 89 92 102 175 178
    ')' (41) 24 25 27 28 29 30 79 89 92 102 175 179 180 181 182
    '*' (42) 72 83 169
    '+' (43) 69
    ',' (44) 41 95 132 136 139 160 184 187 192 199
    '-' (45) 70 84
    '/' (47) 73
    ':' (58) 33 34 35 52 162 164
    ';' (59) 20 22 29 30 37 38 39 116 117 154
    '<' (60) 63
    '=' (61) 45 135 201
    '>' (62) 64
    '?' (63) 52
    '[' (91) 90 177
    ']' (93) 90 177
    '{' (123) 11 141 148 150 195 196
    '}' (125) 11 141 148 150 195 196
    error (256) 13 17 23 44
    IDENTIFICADOR <string_type> (258) 33 39 88 89 93 97 149 174 191 192 194 200
    LITERAL_CADENA <string_type> (259) 101
    CONSTANTE (260) 100
    ENUM <string_type> (261) 193
    STRUCT <string_type> (262) 146
    UNION <string_type> (263) 147
    RETURN <string_type> (264) 36
    IF <string_type> (265) 24 25
    ELSE <string_type> (266) 25
    WHILE <string_type> (267) 28 29
    DO <string_type> (268) 29
    FOR <string_type> (269) 30
    DEFAULT <string_type> (270) 35
    CASE <string_type> (271) 34
    CONTINUE <string_type> (272) 37
    BREAK <string_type> (273) 38
    GOTO <string_type> (274) 39
    SWITCH <string_type> (275) 27
    SIZEOF <string_type> (276) 79
    ENTERO <int_type> (277) 98
    NUM <double_type> (278) 99
    ADD_ASSIGN (279) 46
    SUB_ASSIGN (280) 47
    MUL_ASSIGN (281) 48
    DIV_ASSIGN (282) 49
    MOD_ASSIGN (283) 50
    EQ (284) 59
    NEQ (285) 60
    LE (286) 65
    GE (287) 66
    AND (288) 56
    OR (289) 54
    PTR_OP (290) 93
    INC_OP (291) 80
    DEC_OP (292) 81
    ELIPSIS (293) 184
    INT_TYPE (294) 103
    FLOAT (295) 104
    DOUBLE (296) 105
    CHAR (297) 106
    VOID (298) 107
    SHORT (299) 108
    LONG (300) 109
    UNSIGNED (301) 110
    SIGNED (302) 111
    CONST (303) 124
    VOLATILE (304) 125
    TYPEDEF (305) 126
    STATIC (306) 127
    EXTERN (307) 128
    AUTO (308) 129
    REGISTER (309) 130
    THEN (310)
    VACIO (311) 19
    AUXSENTENCIA (312)
    IDENT_PREC (313)


Nonterminals, with rules where they appear

    $accept (79)
        on left: 0
    programa (80)
        on left: 1
        on right: 0
    unidadTraduccion (81)
        on left: 2 3
        on right: 1 3
    sentencia (82)
        on left: 4 5 6 7 8 9
        on right: 16 24 25 27 28 29 30 33
    sentCompuesta (83)
        on left: 11
        on right: 4 115
    $@1 (84)
        on left: 10
        on right: 11
    listaDeclaraciones (85)
        on left: 12 13
        on right: 11 12 14
    listaDeclaracionOp (86)
        on left: 14 15
        on right: 115
    listaSentencias (87)
        on left: 16 17
        on right: 18 34 35
    listaSentenciasOp (88)
        on left: 18 19
        on right: 11 16
    sentExpresion (89)
        on left: 20 21
        on right: 5 36
    opcionExpresion (90)
        on left: 22 23
        on right: 21
    sentSeleccion (91)
        on left: 24 25 27
        on right: 6
    $@2 (92)
        on left: 26
        on right: 27
    sentIteracion (93)
        on left: 28 29 30
        on right: 7
    expresionOp (94)
        on left: 31 32
        on right: 30
    sentEtiquetadas (95)
        on left: 33 34 35
        on right: 8
    sentSalto (96)
        on left: 36 37 38 39
        on right: 9
    expresion (97)
        on left: 40 41
        on right: 21 24 25 27 28 29 31 34 41 52 90 102 162 164 201
    expAsignacion (98)
        on left: 42 43 44
        on right: 40 41 43 94 95 140
    operAsignacion (99)
        on left: 45 46 47 48 49 50
        on right: 43 44
    expCondicional (100)
        on left: 51 52
        on right: 42 52
    expOr (101)
        on left: 53 54
        on right: 51 52 54
    expAnd (102)
        on left: 55 56
        on right: 53 54 56
    expIgualdad (103)
        on left: 57 58
        on right: 55 56 58
    opcionIgualdad (104)
        on left: 59 60
        on right: 58
    expRelacional (105)
        on left: 61 62
        on right: 57 59 60 62
    opcionRelacional (106)
        on left: 63 64 65 66
        on right: 62
    expAditiva (107)
        on left: 67 68
        on right: 61 63 64 65 66 68
    opcionAditiva (108)
        on left: 69 70
        on right: 68
    expMultiplicativa (109)
        on left: 71 72 73 74
        on right: 67 69 70 72 73 74
    expUnaria (110)
        on left: 75 76 77 78 79
        on right: 43 44 71 72 73 74 78
    opcionIncDec (111)
        on left: 80 81
        on right: 76 77
    operUnario (112)
        on left: 82 83 84 85
        on right: 78
    expPostfijo (113)
        on left: 86 87 88 89
        on right: 75 76 77 87
    opcionPostfijo (114)
        on left: 90 92 93
        on right: 88
    $@3 (115)
        on left: 91
        on right: 92
    listaArgumentosNoVacia (116)
        on left: 94
        on right: 92
    masListaArgumentos (117)
        on left: 95 96
        on right: 94 95
    expPrimaria (118)
        on left: 97 98 99 100 101 102
        on right: 86 87
    tipoDato (119)
        on left: 103 104 105 106 107 108 109 110 111
        on right: 112 142 182
    nombreTipo (120)
        on left: 112
        on right: 79
    declaracionExterna (121)
        on left: 113 114
        on right: 2 3
    definicionFuncion (122)
        on left: 115
        on right: 113
    declaracion (123)
        on left: 116 117
        on right: 12 114
    especificadorDeclaracion (124)
        on left: 118
        on right: 115 116 117 188
    especificadorDeclaracionOp (125)
        on left: 119 120
        on right: 121 122 123
    especificadorCompleto (126)
        on left: 121 122 123
        on right: 118 119
    tipoAlmacenamiento (127)
        on left: 124 125
        on right: 121
    calificadorTipo (128)
        on left: 126 127 128 129 130
        on right: 123 156 172 173
    listaDeclaradores (129)
        on left: 131 132
        on right: 116 132
    declarador (130)
        on left: 133
        on right: 131 132
    opcionPostDeclarador (131)
        on left: 134 135
        on right: 133
    opcionComa (132)
        on left: 136 137
        on right: 141
    listaInicializadores (133)
        on left: 138 139
        on right: 139 141
    inicializador (134)
        on left: 140 141
        on right: 135 138 139
    especificadorTipo (135)
        on left: 142 143 144
        on right: 122 155
    especificadorStructUnion (136)
        on left: 145
        on right: 143
    structUnion (137)
        on left: 146 147
        on right: 145
    cuerpoEspecificador (138)
        on left: 148 149
        on right: 145
    cuerpoStructOp (139)
        on left: 150 151
        on right: 149
    listaDeclaracionesStruct (140)
        on left: 152 153
        on right: 148 150 153
    declaracionStruct (141)
        on left: 154
        on right: 152 153
    listaCalificadores (142)
        on left: 155 156
        on right: 154 157
    listaCalificadoresOp (143)
        on left: 157 158
        on right: 155 156
    declaradoresStruct (144)
        on left: 159 160
        on right: 154 160
    declaStruct (145)
        on left: 161 162
        on right: 159 160
    declaSi (146)
        on left: 163
        on right: 161
    expConstanteOp (147)
        on left: 164 165
        on right: 163 177
    decla (148)
        on left: 166
        on right: 115 117 133 163 175 190
    punteroOp (149)
        on left: 167 168
        on right: 166 169
    puntero (150)
        on left: 169
        on right: 167
    listaCalificadoresTipoOp (151)
        on left: 170 171
        on right: 169
    listaCalificadoresTipo (152)
        on left: 172 173
        on right: 170 173
    declaradorDirecto (153)
        on left: 174 175 176
        on right: 166 176
    continuacionDeclaradorDirecto (154)
        on left: 177 178
        on right: 176
    opcional (155)
        on left: 179 180 181 182
        on right: 178
    listaTiposParametros (156)
        on left: 183
        on right: 180
    opcionalListaParametros (157)
        on left: 184 185
        on right: 183
    listaParametros (158)
        on left: 186 187
        on right: 183 187
    declaracionParametro (159)
        on left: 188
        on right: 186 187
    opcionesDecla (160)
        on left: 189 190
        on right: 188
    listaIdentificadores (161)
        on left: 191 192
        on right: 181 192
    especificadorEnum (162)
        on left: 193
        on right: 144
    opcionalEspecificadorEnum (163)
        on left: 194 195
        on right: 193
    opcionalListaEnumeradores (164)
        on left: 196 197
        on right: 194
    listaEnumeradores (165)
        on left: 198 199
        on right: 195 196 199
    enumerador (166)
        on left: 200
        on right: 198 199
    opcionalEnumerador (167)
        on left: 201 202
        on right: 200


State 0

    0 $accept: • programa $end
    1 programa: • unidadTraduccion
    2 unidadTraduccion: • declaracionExterna
    3                 | • unidadTraduccion declaracionExterna
  103 tipoDato: • INT_TYPE
  104         | • FLOAT
  105         | • DOUBLE
  106         | • CHAR
  107         | • VOID
  108         | • SHORT
  109         | • LONG
  110         | • UNSIGNED
  111         | • SIGNED
  113 declaracionExterna: • definicionFuncion
  114                   | • declaracion
  115 definicionFuncion: • especificadorDeclaracion decla listaDeclaracionOp sentCompuesta
  116 declaracion: • especificadorDeclaracion listaDeclaradores ';'
  117            | • especificadorDeclaracion decla ';'
  118 especificadorDeclaracion: • especificadorCompleto
  121 especificadorCompleto: • tipoAlmacenamiento especificadorDeclaracionOp
  122                      | • especificadorTipo especificadorDeclaracionOp
  123                      | • calificadorTipo especificadorDeclaracionOp
  124 tipoAlmacenamiento: • CONST
  125                   | • VOLATILE
  126 calificadorTipo: • TYPEDEF
  127                | • STATIC
  128                | • EXTERN
  129                | • AUTO
  130                | • REGISTER
  142 especificadorTipo: • tipoDato
  143                  | • especificadorStructUnion
  144                  | • especificadorEnum
  145 especificadorStructUnion: • structUnion cuerpoEspecificador
  146 structUnion: • STRUCT
  147            | • UNION
  193 especificadorEnum: • ENUM opcionalEspecificadorEnum

    ENUM      shift, and go to state 1
    STRUCT    shift, and go to state 2
    UNION     shift, and go to state 3
    INT_TYPE  shift, and go to state 4
    FLOAT     shift, and go to state 5
    DOUBLE    shift, and go to state 6
    CHAR      shift, and go to state 7
    VOID      shift, and go to state 8
    SHORT     shift, and go to state 9
    LONG      shift, and go to state 10
    UNSIGNED  shift, and go to state 11
    SIGNED    shift, and go to state 12
    CONST     shift, and go to state 13
    VOLATILE  shift, and go to state 14
    TYPEDEF   shift, and go to state 15
    STATIC    shift, and go to state 16
    EXTERN    shift, and go to state 17
    AUTO      shift, and go to state 18
    REGISTER  shift, and go to state 19

    programa                  go to state 20
    unidadTraduccion          go to state 21
    tipoDato                  go to state 22
    declaracionExterna        go to state 23
    definicionFuncion         go to state 24
    declaracion               go to state 25
    especificadorDeclaracion  go to state 26
    especificadorCompleto     go to state 27
    tipoAlmacenamiento        go to state 28
    calificadorTipo           go to state 29
    especificadorTipo         go to state 30
    especificadorStructUnion  go to state 31
    structUnion               go to state 32
    especificadorEnum         go to state 33


State 1

  193 especificadorEnum: ENUM • opcionalEspecificadorEnum
  194 opcionalEspecificadorEnum: • IDENTIFICADOR opcionalListaEnumeradores
  195                          | • '{' listaEnumeradores '}'

    IDENTIFICADOR  shift, and go to state 34
    '{'            shift, and go to state 35

    opcionalEspecificadorEnum  go to state 36


State 2

  146 structUnion: STRUCT •

    $default  reduce using rule 146 (structUnion)


State 3

  147 structUnion: UNION •

    $default  reduce using rule 147 (structUnion)


State 4

  103 tipoDato: INT_TYPE •

    $default  reduce using rule 103 (tipoDato)


State 5

  104 tipoDato: FLOAT •

    $default  reduce using rule 104 (tipoDato)


State 6

  105 tipoDato: DOUBLE •

    $default  reduce using rule 105 (tipoDato)


State 7

  106 tipoDato: CHAR •

    $default  reduce using rule 106 (tipoDato)


State 8

  107 tipoDato: VOID •

    $default  reduce using rule 107 (tipoDato)


State 9

  108 tipoDato: SHORT •

    $default  reduce using rule 108 (tipoDato)


State 10

  109 tipoDato: LONG •

    $default  reduce using rule 109 (tipoDato)


State 11

  110 tipoDato: UNSIGNED •

    $default  reduce using rule 110 (tipoDato)


State 12

  111 tipoDato: SIGNED •

    $default  reduce using rule 111 (tipoDato)


State 13

  124 tipoAlmacenamiento: CONST •

    $default  reduce using rule 124 (tipoAlmacenamiento)


State 14

  125 tipoAlmacenamiento: VOLATILE •

    $default  reduce using rule 125 (tipoAlmacenamiento)


State 15

  126 calificadorTipo: TYPEDEF •

    $default  reduce using rule 126 (calificadorTipo)


State 16

  127 calificadorTipo: STATIC •

    $default  reduce using rule 127 (calificadorTipo)


State 17

  128 calificadorTipo: EXTERN •

    $default  reduce using rule 128 (calificadorTipo)


State 18

  129 calificadorTipo: AUTO •

    $default  reduce using rule 129 (calificadorTipo)


State 19

  130 calificadorTipo: REGISTER •

    $default  reduce using rule 130 (calificadorTipo)


State 20

    0 $accept: programa • $end

    $end  shift, and go to state 37


State 21

    1 programa: unidadTraduccion •  [$end]
    3 unidadTraduccion: unidadTraduccion • declaracionExterna
  103 tipoDato: • INT_TYPE
  104         | • FLOAT
  105         | • DOUBLE
  106         | • CHAR
  107         | • VOID
  108         | • SHORT
  109         | • LONG
  110         | • UNSIGNED
  111         | • SIGNED
  113 declaracionExterna: • definicionFuncion
  114                   | • declaracion
  115 definicionFuncion: • especificadorDeclaracion decla listaDeclaracionOp sentCompuesta
  116 declaracion: • especificadorDeclaracion listaDeclaradores ';'
  117            | • especificadorDeclaracion decla ';'
  118 especificadorDeclaracion: • especificadorCompleto
  121 especificadorCompleto: • tipoAlmacenamiento especificadorDeclaracionOp
  122                      | • especificadorTipo especificadorDeclaracionOp
  123                      | • calificadorTipo especificadorDeclaracionOp
  124 tipoAlmacenamiento: • CONST
  125                   | • VOLATILE
  126 calificadorTipo: • TYPEDEF
  127                | • STATIC
  128                | • EXTERN
  129                | • AUTO
  130                | • REGISTER
  142 especificadorTipo: • tipoDato
  143                  | • especificadorStructUnion
  144                  | • especificadorEnum
  145 especificadorStructUnion: • structUnion cuerpoEspecificador
  146 structUnion: • STRUCT
  147            | • UNION
  193 especificadorEnum: • ENUM opcionalEspecificadorEnum

    ENUM      shift, and go to state 1
    STRUCT    shift, and go to state 2
    UNION     shift, and go to state 3
    INT_TYPE  shift, and go to state 4
    FLOAT     shift, and go to state 5
    DOUBLE    shift, and go to state 6
    CHAR      shift, and go to state 7
    VOID      shift, and go to state 8
    SHORT     shift, and go to state 9
    LONG      shift, and go to state 10
    UNSIGNED  shift, and go to state 11
    SIGNED    shift, and go to state 12
    CONST     shift, and go to state 13
    VOLATILE  shift, and go to state 14
    TYPEDEF   shift, and go to state 15
    STATIC    shift, and go to state 16
    EXTERN    shift, and go to state 17
    AUTO      shift, and go to state 18
    REGISTER  shift, and go to state 19

    $default  reduce using rule 1 (programa)

    tipoDato                  go to state 22
    declaracionExterna        go to state 38
    definicionFuncion         go to state 24
    declaracion               go to state 25
    especificadorDeclaracion  go to state 26
    especificadorCompleto     go to state 27
    tipoAlmacenamiento        go to state 28
    calificadorTipo           go to state 29
    especificadorTipo         go to state 30
    especificadorStructUnion  go to state 31
    structUnion               go to state 32
    especificadorEnum         go to state 33


State 22

  142 especificadorTipo: tipoDato •

    $default  reduce using rule 142 (especificadorTipo)


State 23

    2 unidadTraduccion: declaracionExterna •

    $default  reduce using rule 2 (unidadTraduccion)


State 24

  113 declaracionExterna: definicionFuncion •

    $default  reduce using rule 113 (declaracionExterna)


State 25

  114 declaracionExterna: declaracion •

    $default  reduce using rule 114 (declaracionExterna)


State 26

  115 definicionFuncion: especificadorDeclaracion • decla listaDeclaracionOp sentCompuesta
  116 declaracion: especificadorDeclaracion • listaDeclaradores ';'
  117            | especificadorDeclaracion • decla ';'
  131 listaDeclaradores: • declarador
  132                  | • listaDeclaradores ',' declarador
  133 declarador: • decla opcionPostDeclarador
  166 decla: • punteroOp declaradorDirecto
  167 punteroOp: • puntero
  168          | ε •  [IDENTIFICADOR, '(']
  169 puntero: • '*' listaCalificadoresTipoOp punteroOp

    '*'  shift, and go to state 39

    $default  reduce using rule 168 (punteroOp)

    listaDeclaradores  go to state 40
    declarador         go to state 41
    decla              go to state 42
    punteroOp          go to state 43
    puntero            go to state 44


State 27

  118 especificadorDeclaracion: especificadorCompleto •

    $default  reduce using rule 118 (especificadorDeclaracion)


State 28

  103 tipoDato: • INT_TYPE
  104         | • FLOAT
  105         | • DOUBLE
  106         | • CHAR
  107         | • VOID
  108         | • SHORT
  109         | • LONG
  110         | • UNSIGNED
  111         | • SIGNED
  119 especificadorDeclaracionOp: • especificadorCompleto
  120                           | ε •  [IDENTIFICADOR, ',', ')', '(', '*']
  121 especificadorCompleto: • tipoAlmacenamiento especificadorDeclaracionOp
  121                      | tipoAlmacenamiento • especificadorDeclaracionOp
  122                      | • especificadorTipo especificadorDeclaracionOp
  123                      | • calificadorTipo especificadorDeclaracionOp
  124 tipoAlmacenamiento: • CONST
  125                   | • VOLATILE
  126 calificadorTipo: • TYPEDEF
  127                | • STATIC
  128                | • EXTERN
  129                | • AUTO
  130                | • REGISTER
  142 especificadorTipo: • tipoDato
  143                  | • especificadorStructUnion
  144                  | • especificadorEnum
  145 especificadorStructUnion: • structUnion cuerpoEspecificador
  146 structUnion: • STRUCT
  147            | • UNION
  193 especificadorEnum: • ENUM opcionalEspecificadorEnum

    ENUM      shift, and go to state 1
    STRUCT    shift, and go to state 2
    UNION     shift, and go to state 3
    INT_TYPE  shift, and go to state 4
    FLOAT     shift, and go to state 5
    DOUBLE    shift, and go to state 6
    CHAR      shift, and go to state 7
    VOID      shift, and go to state 8
    SHORT     shift, and go to state 9
    LONG      shift, and go to state 10
    UNSIGNED  shift, and go to state 11
    SIGNED    shift, and go to state 12
    CONST     shift, and go to state 13
    VOLATILE  shift, and go to state 14
    TYPEDEF   shift, and go to state 15
    STATIC    shift, and go to state 16
    EXTERN    shift, and go to state 17
    AUTO      shift, and go to state 18
    REGISTER  shift, and go to state 19

    $default  reduce using rule 120 (especificadorDeclaracionOp)

    tipoDato                    go to state 22
    especificadorDeclaracionOp  go to state 45
    especificadorCompleto       go to state 46
    tipoAlmacenamiento          go to state 28
    calificadorTipo             go to state 29
    especificadorTipo           go to state 30
    especificadorStructUnion    go to state 31
    structUnion                 go to state 32
    especificadorEnum           go to state 33


State 29

  103 tipoDato: • INT_TYPE
  104         | • FLOAT
  105         | • DOUBLE
  106         | • CHAR
  107         | • VOID
  108         | • SHORT
  109         | • LONG
  110         | • UNSIGNED
  111         | • SIGNED
  119 especificadorDeclaracionOp: • especificadorCompleto
  120                           | ε •  [IDENTIFICADOR, ',', ')', '(', '*']
  121 especificadorCompleto: • tipoAlmacenamiento especificadorDeclaracionOp
  122                      | • especificadorTipo especificadorDeclaracionOp
  123                      | • calificadorTipo especificadorDeclaracionOp
  123                      | calificadorTipo • especificadorDeclaracionOp
  124 tipoAlmacenamiento: • CONST
  125                   | • VOLATILE
  126 calificadorTipo: • TYPEDEF
  127                | • STATIC
  128                | • EXTERN
  129                | • AUTO
  130                | • REGISTER
  142 especificadorTipo: • tipoDato
  143                  | • especificadorStructUnion
  144                  | • especificadorEnum
  145 especificadorStructUnion: • structUnion cuerpoEspecificador
  146 structUnion: • STRUCT
  147            | • UNION
  193 especificadorEnum: • ENUM opcionalEspecificadorEnum

    ENUM      shift, and go to state 1
    STRUCT    shift, and go to state 2
    UNION     shift, and go to state 3
    INT_TYPE  shift, and go to state 4
    FLOAT     shift, and go to state 5
    DOUBLE    shift, and go to state 6
    CHAR      shift, and go to state 7
    VOID      shift, and go to state 8
    SHORT     shift, and go to state 9
    LONG      shift, and go to state 10
    UNSIGNED  shift, and go to state 11
    SIGNED    shift, and go to state 12
    CONST     shift, and go to state 13
    VOLATILE  shift, and go to state 14
    TYPEDEF   shift, and go to state 15
    STATIC    shift, and go to state 16
    EXTERN    shift, and go to state 17
    AUTO      shift, and go to state 18
    REGISTER  shift, and go to state 19

    $default  reduce using rule 120 (especificadorDeclaracionOp)

    tipoDato                    go to state 22
    especificadorDeclaracionOp  go to state 47
    especificadorCompleto       go to state 46
    tipoAlmacenamiento          go to state 28
    calificadorTipo             go to state 29
    especificadorTipo           go to state 30
    especificadorStructUnion    go to state 31
    structUnion                 go to state 32
    especificadorEnum           go to state 33


State 30

  103 tipoDato: • INT_TYPE
  104         | • FLOAT
  105         | • DOUBLE
  106         | • CHAR
  107         | • VOID
  108         | • SHORT
  109         | • LONG
  110         | • UNSIGNED
  111         | • SIGNED
  119 especificadorDeclaracionOp: • especificadorCompleto
  120                           | ε •  [IDENTIFICADOR, ',', ')', '(', '*']
  121 especificadorCompleto: • tipoAlmacenamiento especificadorDeclaracionOp
  122                      | • especificadorTipo especificadorDeclaracionOp
  122                      | especificadorTipo • especificadorDeclaracionOp
  123                      | • calificadorTipo especificadorDeclaracionOp
  124 tipoAlmacenamiento: • CONST
  125                   | • VOLATILE
  126 calificadorTipo: • TYPEDEF
  127                | • STATIC
  128                | • EXTERN
  129                | • AUTO
  130                | • REGISTER
  142 especificadorTipo: • tipoDato
  143                  | • especificadorStructUnion
  144                  | • especificadorEnum
  145 especificadorStructUnion: • structUnion cuerpoEspecificador
  146 structUnion: • STRUCT
  147            | • UNION
  193 especificadorEnum: • ENUM opcionalEspecificadorEnum

    ENUM      shift, and go to state 1
    STRUCT    shift, and go to state 2
    UNION     shift, and go to state 3
    INT_TYPE  shift, and go to state 4
    FLOAT     shift, and go to state 5
    DOUBLE    shift, and go to state 6
    CHAR      shift, and go to state 7
    VOID      shift, and go to state 8
    SHORT     shift, and go to state 9
    LONG      shift, and go to state 10
    UNSIGNED  shift, and go to state 11
    SIGNED    shift, and go to state 12
    CONST     shift, and go to state 13
    VOLATILE  shift, and go to state 14
    TYPEDEF   shift, and go to state 15
    STATIC    shift, and go to state 16
    EXTERN    shift, and go to state 17
    AUTO      shift, and go to state 18
    REGISTER  shift, and go to state 19

    $default  reduce using rule 120 (especificadorDeclaracionOp)

    tipoDato                    go to state 22
    especificadorDeclaracionOp  go to state 48
    especificadorCompleto       go to state 46
    tipoAlmacenamiento          go to state 28
    calificadorTipo             go to state 29
    especificadorTipo           go to state 30
    especificadorStructUnion    go to state 31
    structUnion                 go to state 32
    especificadorEnum           go to state 33


State 31

  143 especificadorTipo: especificadorStructUnion •

    $default  reduce using rule 143 (especificadorTipo)


State 32

  145 especificadorStructUnion: structUnion • cuerpoEspecificador
  148 cuerpoEspecificador: • '{' listaDeclaracionesStruct '}'
  149                    | • IDENTIFICADOR cuerpoStructOp

    IDENTIFICADOR  shift, and go to state 49
    '{'            shift, and go to state 50

    cuerpoEspecificador  go to state 51
